# autohttps

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.md  TECH.md  opencode.json  workbench.config.json
.claude/: launch.json
.claude/agent-memory/architect/: MEMORY.md  reference_baseline-docs.md  reference_db-coherence-anchor.md  reference_version-check.md
.claude/agent-memory/developer/: MEMORY.md  build-layout-notes.md  enum-digit-wire-values.md  hickory-resolver-dns-precheck.md  instant-acme-integration.md  tauri-desktop-shell.md  tauri-remote-ipc-and-packaging.md  win-e2e-verification-gotchas.md
.claude/agent-memory/product-manager/: MEMORY.md  opcflow-artifact-registration.md
.claude/agents/: architect.md  designer.md  developer.md  product-manager.md  qa.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  portable.yml
.opencode/agents/: architect.md  designer.md  developer.md  product-manager.md  qa.md
.opencode/plugins/: opcflow.ts
crates/api/: Cargo.toml  build.rs
crates/api/src/: dto.rs  embed.rs  error.rs  events.rs  extract.rs  lib.rs  parse.rs  req.rs  serde_helpers.rs  state.rs
crates/api/src/handlers/: acme.rs  app_info.rs  certificates.rs  dashboard.rs  domains.rs  events.rs  local_ca.rs  mod.rs  settings.rs  sync.rs  tasks.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  util.rs
crates/core/src/ca/: mod.rs
crates/core/src/domain/: enums.rs  error.rs  events.rs  mod.rs  rules.rs
crates/core/src/persistence/: db.rs  mod.rs
crates/core/src/persistence/entities/: acme_accounts.rs  certificate_domains.rs  certificates.rs  challenges.rs  domains.rs  http01_validation_configs.rs  internal_cert_revocations.rs  mod.rs  root_cas.rs  settings.rs  sync_configs.rs  task_log_entries.rs  tasks.rs
crates/core/src/persistence/migration/: m20260716_000001_init.rs  m20260719_000002_sync.rs  mod.rs
crates/core/src/scan/: mod.rs
crates/core/src/secrets/: mod.rs
crates/core/src/services/: acme.rs  boot.rs  certificates.rs  context.rs  dashboard.rs  domains.rs  executor.rs  local_ca.rs  mod.rs  pagination.rs  settings.rs  sync.rs  tasks.rs
crates/core/src/sync/: backup.rs  mod.rs  webdav.rs
crates/core/tests/: services.rs  sync.rs
crates/desktop/: Cargo.toml  tauri.conf.json
crates/desktop/capabilities/: default.json  export.json
crates/desktop/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/: PROCESS.md
docs/architecture/api/app/: acme.md  certificates.md  dashboard.md  domains.md  local-ca.md  settings.md  sync.md  tasks.md
docs/architecture/api/app/common/: conventions.md  events.md
docs/architecture/database/: _overview.md  acme.md  certificates.md  dashboard.md  domains.md  local-ca.md  settings.md  sync.md  tasks.md
docs/design/prompts/app/certificates/: detail.md  list.md
docs/design/prompts/app/dashboard/: overview.md
docs/design/prototypes/app/certificates/: detail.html  list.html
docs/design/prototypes/app/dashboard/: overview.html
docs/design/systems/: app.md
docs/prd/: glossary.md  project.md  roles.md
docs/prd/flows/: acme.md  certificates.md  dashboard.md  domains.md  local-ca.md  settings.md  tasks.md
docs/prd/modules/: acme.md  certificates.md  dashboard.md  domains.md  local-ca.md  settings.md  sync.md  tasks.md
docs/prd/pages/app/acme/: accounts.md  challenge-wizard.md
docs/prd/pages/app/certificates/: detail.md  issue.md  list.md
docs/prd/pages/app/dashboard/: overview.md
docs/prd/pages/app/domains/: detail.md  list.md
docs/prd/pages/app/local-ca/: create.md  detail.md  list.md
docs/prd/pages/app/settings/: settings.md
docs/prd/pages/app/tasks/: detail.md  list.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/bindings/: index.ts
frontend/src/components/: app-shell.tsx  status-badge.tsx  theme-toggle.tsx
frontend/src/components/acme/: register-account-dialog.tsx
frontend/src/components/domains/: create-domain-dialog.tsx
frontend/src/components/shared/: category-badges.tsx  mono.tsx  page-header.tsx  pagination.tsx  states.tsx
frontend/src/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  select.tsx  separator.tsx  skeleton.tsx  sonner.tsx  switch.tsx  table.tsx  textarea.tsx  tooltip.tsx
frontend/src/hooks/: use-server-events.ts
frontend/src/lib/: api.ts  cert-rules.ts  download.ts  queries.ts  task-rules.ts  time.ts  utils.ts
frontend/src/pages/: acme-accounts.tsx  certificate-detail.tsx  certificate-issue.tsx  certificates-list.tsx  challenge-wizard.tsx  coming-soon.tsx  dashboard.tsx  domain-detail.tsx  domains-list.tsx  local-ca-create.tsx  local-ca-detail.tsx  local-ca-list.tsx  not-found.tsx  settings-webdav.tsx  settings.tsx  task-detail.tsx  tasks-list.tsx
frontend/src/stores/: ui.ts
tools/: render_icons.py
