[package]
name = "autohttps-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "autohttps 共享 HTTP 表面(传输契约层):axum Router + DTO + SSE + 内嵌 SPA"

[lib]
name = "autohttps_api"
path = "src/lib.rs"

[dependencies]
autohttps-core.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
ts-rs.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
tracing.workspace = true
sea-orm.workspace = true
