[package]
name = "autohttps-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "autohttps 领域核心库(业务唯一真相):枚举、实体、迁移、服务"

[lib]
name = "autohttps_core"
path = "src/lib.rs"

[dependencies]
sea-orm.workspace = true
sea-orm-migration.workspace = true
# 直连 sqlx 以设置每连接 PRAGMA(WAL + foreign_keys);版本随 sea-orm 1.1 的 sqlx 0.8 统一。
sqlx = { version = "0.8", default-features = false, features = [
    "sqlite",
    "runtime-tokio-rustls",
] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
ts-rs.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# --- X.509 / 自签 CA(TECH 决策5:rcgen,避 openssl 原生依赖 L7)---
# ring 后端(非 aws-lc-rs)以规避 Windows 上 cmake/nasm 构建依赖,保三平台对等。
rcgen = { version = "0.14", default-features = false, features = ["ring", "pem", "x509-parser"] }
x509-parser = "0.18"

# --- 敏感数据静态加密(TECH 决策3:age)---
age = { version = "0.11", default-features = false }
rand = "0.8"
sha2 = "0.10"

# --- ACME 客户端(TECH 决策:instant-acme 0.8)---
# ring 后端(非 aws-lc-rs)与 rcgen/rustls 全树对齐,规避 Windows 上 aws-lc-rs 的 cmake/nasm(L7)。
# hyper-rustls:默认 HTTPS 客户端(Account::builder / builder_with_root 自定义根信任 Pebble 测试 CA);
# rcgen:Order::finalize() 自动生成叶子密钥 + CSR。
instant-acme = { version = "0.8", default-features = false, features = [
    "hyper-rustls",
    "ring",
    "rcgen",
] }
# 吊销请求需 `CertificateDer`(instant-acme 未 re-export;版本随 rustls/instant-acme 全树对齐)。
rustls-pki-types = "1"

# --- DNS-01 本地预检(acme flows §4.3:提交前查 TXT 是否生效)---
# 仅默认 features(system-config + tokio):纯 UDP/TCP 查询,不启用任何 TLS/DNSSEC/DoH backend,
# 故**不引入 aws-lc-rs 亦不引入 rustls**(保 Windows 构建无 cmake/nasm 依赖,L7)。
hickory-resolver = { version = "0.25", default-features = false, features = [
    "system-config",
    "tokio",
] }
p12-keystore = "0.2.1"
pem = "3.0.6"

# --- WebDAV 备份同步(sync 模块)---
# HTTP 栈复用 instant-acme 已引入的 hyper + hyper-rustls(platform-verifier 原生根证书),
# 不引入 reqwest(保持依赖面与构建成本)。zip 用于备份包打包(api 证书导出同款)。
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
hyper-rustls = { version = "0.27", default-features = false, features = [
    "http1",
    "rustls-platform-verifier",
] }
http-body-util = "0.1"
base64 = "0.22"
zip = { version = "5.0.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
