[package]
name = "desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "autohttps 桌面壳(形态宿主):Tauri v2,进程内起回环 axum,窗口 800×600"

[[bin]]
name = "desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
autohttps-core.workspace = true
autohttps-api.workspace = true
axum.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri = { version = "2", features = [] }
# 单实例:防同一形态跑两份争同一 SQLite(ARCHITECTURE §4.2)
tauri-plugin-single-instance = "2"
