[package]
name = "desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "autohttps 桌面壳(形态宿主):Tauri v2,进程内起回环 axum,窗口 800×600"

[[bin]]
name = "desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
autohttps-core.workspace = true
autohttps-api.workspace = true
axum.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# tray-icon:系统托盘常驻 + 红点角标;image-png:从内嵌 PNG 解码托盘图标(Image::from_bytes)
tauri = { version = "2", features = ["tray-icon", "image-png"] }
# 单实例:防同一形态跑两份争同一 SQLite(ARCHITECTURE §4.2);第二次启动聚焦已存在窗口
tauri-plugin-single-instance = "2"
# 开机自启:对应 settings.autostartEnabled(仅桌面,ARCHITECTURE §4.2)
tauri-plugin-autostart = "2"
# 原生保存对话框 + 文件写入:证书/根 CA 导出走"选路径"体验(方案A 交付通道分流,契约 §5);
# 服务器形态无此二插件、仍走 webview <a download> 兜底。
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
